// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management large image component renders image 1`] = `
<div
  class="m-auto js-design-image h-100 w-100 d-flex-center"
>
  <img
    alt="test"
    class="mh-100 img-fluid"
    src="test.jpg"
  />
</div>
`;

exports[`Design management large image component renders loading state 1`] = `
<div
  class="m-auto js-design-image h-100 w-100 d-flex-center"
  isloading="true"
>
  <img
    alt=""
    class="mh-100 img-fluid"
    src=""
  />
</div>
`;

exports[`Design management large image component sets correct classes and styles if imageStyle is set 1`] = `
<div
  class="m-auto js-design-image"
>
  <img
    alt="test"
    class="mh-100"
    src="test.jpg"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Design management large image component zoom sets image style when zoomed 1`] = `
<div
  class="m-auto js-design-image"
>
  <img
    alt="test"
    class="mh-100"
    src="test.jpg"
    style="width: 200px; height: 200px;"
  />
</div>
`;
